# XgenePy

./: README.md  environment.yaml  pyproject.toml
data/: cold_ballinger_metadata.csv
notebooks/: one_condition_example.ipynb
notebooks/.ipynb_checkpoints/: multi_condition_example-checkpoint.ipynb  one_condition_example-checkpoint.ipynb
outputs/: multicondition_dominant_design_matrix.csv  multicondition_dominant_fdrs.csv  multicondition_dominant_raw_pvals.csv  multicondition_dominant_tagwise_dispersion.csv  multicondition_dominant_weights.csv  multicondition_log_additive_design_matrix.csv  multicondition_log_additive_fdrs.csv  multicondition_log_additive_raw_pvals.csv  multicondition_log_additive_weights.csv  onecondition_dominant_fdrs.csv  onecondition_dominant_proportion_cis.csv  onecondition_dominant_raw_pvals.csv  onecondition_dominant_weights.csv  onecondition_log_additive_fdrs.csv  onecondition_log_additive_proportion_cis.csv  onecondition_log_additive_raw_pvals.csv  onecondition_log_additive_tagwise_dispersion.csv  onecondition_log_additive_weights.csv
outputs/batcold/: dominant_fdrs.csv  dominant_proportion_cis.csv  dominant_raw_pvals.csv  dominant_tagwise_dispersion.csv  dominant_weights.csv  log_additive_fdrs.csv  log_additive_proportion_cis.csv  log_additive_raw_pvals.csv  log_additive_weights.csv
scripts/.ipynb_checkpoints/: run_batcold_example-checkpoint.py
src/xgenepy/: __init__.py  plotting.py
tests/: test_model.py  validate_against_xgener.py
tests/.ipynb_checkpoints/: test_model-checkpoint.py
(+1 files in other folders)
