[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xgenepy"
version = "0.1.0"
description = "Python port of XgeneR using edgepython."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "BSD-2-Clause" }
authors = [
  { name = "Maria T. Carilli" }
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "edgepython"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
